// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Logo should render 1`] = `
<div>
  <span
    class="relative"
  >
    <svg>
      arkvault-logo.svg
    </svg>
  </span>
</div>
`;

exports[`Logo should render with height 1`] = `
<div>
  <span
    class="relative"
  >
    <svg
      height="20"
    >
      arkvault-logo.svg
    </svg>
  </span>
</div>
`;
